fix: 로컬 기동 안정화와 Next HMR BFCache 가드 추가
- OpenAI/MarketAux/Jasypt 키가 비어 있어도 앱이 뜨게 하고, 미설정 API는 호출만 무시하기
- 빈 스키마에서 Flyway V4가 users 테이블 없을 때 실패하지 않도록 보정하고 repair 하기
- Redis 연결 실패 원인을 로그에 남기고, 프론트는 BFCache 진입 시 HMR 소켓을 닫되 실패는 개발 로그 정리